--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ model/__pycache__/__init__.cpython-37.pyc
 dataset/__pycache__/cityscapes.cpython-37.pyc
 __pycache__/checkpoint.cpython-37.pyc
 ebm/__pycache__/sampler.cpython-37.pyc
+test.py
