Skip connectionでp(x)学習 (#21)
* torchベースで簡易ネットワーク作成

* make_skip

Co-authored-by: 025458 後藤雄介 <goto.yusuke@subaru.co.jp>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dataset/__pycache__/cityscapes.cpython-37.pyc
 __pycache__/checkpoint.cpython-37.pyc
 ebm/__pycache__/sampler.cpython-37.pyc
 test.py
+ebm/sampler.py.bak
