hydra設定ファイルから,をなくす

--- a/lsd_mnist.yaml
+++ b/lsd_mnist.yaml
@@ -5,16 +5,12 @@ optim:
   f_lr: 1E-3
   q_lr: 1E-3
   batch_size: 128
-  l2: 0.5
+  critic_l2: 0.5
   critic_loop: 10
   focal_gamma: 2.0
   weight_decay: 1E-5
   lsd_weight: 1.0
   classify_weight: 1E-0
 data:
-  train:
-    remove_class: []
-    remove_col_too: False
-  test:
-    remove_class: []
-    remove_col_too: False
+  remove_class: []
+  remove_col_too: False
