--- a/dirichlet.yaml
+++ b/dirichlet.yaml
@@ -2,6 +2,7 @@ optim:
   seed: 0
   batch_size: 128
   lr: 1E-4
+  weight_decay_rate: 1E-4
   focal_gamma: 2.0
   epoch_num: 2000
   burnin_epoch: 1000
